fix(webgl-media-editor): preview padding is too big

--- a/packages/webgl-media-editor/src/css/basics.css
+++ b/packages/webgl-media-editor/src/css/basics.css
@@ -12,7 +12,7 @@
   --height-slider: 0.4rem;
   --width-slider-thumb: 1rem;
   --gap-default: 0.2rem;
-  --gap-preview: 1rem;
+  --gap-preview: 0.4rem;
 
   /* COLOR SCHEMES */
   color-scheme: light dark;
